# veloanalyzer

./: .gitignore  LICENSE  README.md  README_mtb_analyzer.md  main.py  mtb_analyzer.py  pyproject.toml  races.yml
.github/workflows/: generate-reports.yml
docs/: data.db  index.css  index.html  index.js  posedarje-2026-mj.html  skalica-2026-mj.html  tessuti-2026-mj.html  vimperk-2026-mj.html
docs/assets/: index-2DF1z8lw.js  index-AN777LGa.css  index-CEXmJ_JN.js  index-ChjNOHoU.js  index-gyXNRfQy.js
frontend/: app.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: db.ts  main.ts  style.css  utils.ts
frontend/src/ui/: CountryChart.ts  H2H.ts  RiderCard.ts  RiderTable.ts  StatsBar.ts  TeamChart.ts
mtb_analyzer/: __init__.py  config.py  display.py  export.py  export_db.py  models.py  ranking.py  utils.py
mtb_analyzer/parsers/: __init__.py  bike_revolution.py  generic.py  gsheets.py  hynekmusil.py  raceresult.py  runtix.py  sportkrono.py  sportsoft.py  sportzeitnehmung.py  stoperica.py  temposport.py  wowtiming.py
scripts/: discover_races.py  generate_site.py  sync_races.py
